--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,15 +1,47 @@
-<a href="https://github.com/LinghanX/wedding-planner">Project</a>
-<a routerLink="home">Assignment</a>
-<a routerLink="test-list">Test MongoDB</a>
-<a href="https://github.com/LinghanX/xing-linghan-webdev">GitRepo</a>
+<div class="container">
+  <div class="container nav-container">
+    <div class="row">
+      <nav class="navbar navbar-fixed-top">
+        <div class="container">
+          <a class="navbar-brand">Web Dev Summer 1</a>
+          <ul class="nav navbar-nav" routerLinkActive="active">
+            <li class="nav-item">
+              <a routerLink="home">Home</a>
+            </li>
+            <li class="nav-item">
+              <a href="https://github.com/LinghanX/wedding-planner">Project</a>
+            </li>
+            <li class="nav-item">
+              <a routerLink="home">Assignment</a>
+            </li>
+            <li class="nav-item">
+              <a routerLink="test-list">Test MongoDB</a>
+            </li>
+            <li class="nav-item">
+              <a href="https://github.com/LinghanX/xing-linghan-webdev">GitRepo</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </div>
+    <div class="row">
+      <hr>
+    </div>
+  </div>
 
-<div class="container main-body">
-  <h1>
-    {{title}}
-  </h1>
+
+  <div class="container">
+    <div class="row">
+      <h1>
+        {{title}}
+      </h1>
+    </div>
+  </div>
+  <hr>
+
+  <div class="container">
+    <div class="row">
+      <router-outlet></router-outlet>
+    </div>
+  </div>
 </div>
-
-<div>
-  <router-outlet></router-outlet>
-</div>
-
