--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="container nav-container">
     <div class="row">
-      <nav class="navbar navbar-fixed-top">
+      <nav class="navbar navbar-fixed-top navbar-default">
         <div class="container">
           <a class="navbar-brand">Web Dev Summer 1</a>
           <ul class="nav navbar-nav" routerLinkActive="active">
@@ -24,11 +24,7 @@
         </div>
       </nav>
     </div>
-    <div class="row">
-      <hr>
-    </div>
   </div>
-
 
   <div class="container">
     <div class="row">
