--- a/public/assignment/views/user/templates/login.view.client.html
+++ b/public/assignment/views/user/templates/login.view.client.html
@@ -2,23 +2,29 @@
     <div class="centered-form">
         <h1>Login</h1>
 
+        <div class="alert">
+            {{ model.message }}
+        </div>
+
         <label for="username">Username</label>
         <input type="text"
+               ng-model="username"
                id="username"
                class="form-control"
                placeholder="blob123"/>
 
-        <label for="username">Password</label>
+        <label for="password">Password</label>
         <input type="password"
+               ng-model="password"
                id="password"
                class="form-control"
                placeholder="sliq878"/>
 
         <a class="btn btn-primary btn-block"
-           href="profile.view.client.html">Login</a>
+           ng-click="model.login(username, password)">Login</a>
 
         <a class="btn btn-success btn-block"
-           href="register.view.client.html">Register</a>
+           href="#!/register">Register</a>
     </div>
 </div>
 
