--- a/public/assignment/views/user/templates/register.view.client.html
+++ b/public/assignment/views/user/templates/register.view.client.html
@@ -1,25 +1,27 @@
 <div class="container centered-form">
-
     <h1>Register</h1>
 
     <label for="username">Username</label>
     <input type="text"
+           ng-model="username"
            id="username"
            class="form-control"
            placeholder="username"/>
     <label for="password">Password</label>
     <input type="password"
+           ng-model="password"
            id="password"
            class="form-control"
            placeholder="asdk333"/>
     <label for="veryfy-password">Veryfy password</label>
     <input type="password"
+           ng-model="veryfyPassword"
            id="veryfy-password"
            class="form-control"
            placeholder="asdk333"/>
     <a class="btn btn-primary btn-block"
-       href="profile.view.client.html">Register</a>
+       ng-click="model.registerUser(username, password, veryfyPassword)">Register</a>
     <a class="btn btn-danger  btn-block"
-       href="login.view.client.html">Cancel</a>
+       href="#!/">Cancel</a>
 </div>
 
