assignment 3 wip, website controllers

--- a/public/assignment/views/page/page-list.view.client.html
+++ b/public/assignment/views/page/page-list.view.client.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-light navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="../website/website-list.view.client.html">
+            <a class="navbar-brand" href="../website/templates/website-list.view.client.html">
                 <i class="fa fa-arrow-left" aria-hidden="true"></i>
             </a>
             <a class="navbar-brand" href="#">
@@ -51,7 +51,7 @@
                     2/2/2017
                 </div>
                 <div class="col-xs-1">
-                    <a href="../website/website-edit.view.client.html">
+                    <a href="../website/templates/website-edit.view.client.html">
                         <span class="glyphicon glyphicon-cog pull-right"></span>
                     </a>
                 </div>
@@ -71,7 +71,7 @@
                     2/2/2017
                 </div>
                 <div class="col-xs-1">
-                    <a href="../website/website-edit.view.client.html">
+                    <a href="../website/templates/website-edit.view.client.html">
                         <span class="glyphicon glyphicon-cog pull-right"></span>
                     </a>
                 </div>
@@ -91,7 +91,7 @@
                     2/2/2017
                 </div>
                 <div class="col-xs-1">
-                    <a href="../website/website-edit.view.client.html">
+                    <a href="../website/templates/website-edit.view.client.html">
                         <span class="glyphicon glyphicon-cog pull-right"></span>
                     </a>
                 </div>
@@ -111,7 +111,7 @@
                     2/2/2017
                 </div>
                 <div class="col-xs-1">
-                    <a href="../website/website-edit.view.client.html">
+                    <a href="../website/templates/website-edit.view.client.html">
                         <span class="glyphicon glyphicon-cog pull-right"></span>
                     </a>
                 </div>
