--- a/public/assignment/views/website/templates/website-new.view.client.html
+++ b/public/assignment/views/website/templates/website-new.view.client.html
@@ -5,7 +5,7 @@
                 <i class="fa fa-arrow-left" aria-hidden="true"></i>
             </a>
             <a class="navbar-brand" href="#">
-                Edit Website
+                New Website
             </a>
             <p class="navbar-text pull-right">
                 <a href="website-list.view.client.html" class="navbar-link">
@@ -17,13 +17,14 @@
 </nav>
 
 <div class="container-fluid">
+
     <div class="row">
         <div class="col-xs-4 hidden-xs">
             <ul class="list-group">
                 <li class="list-group-item">
                     <div class="row">
                         <div class="col-8 edit-items" >
-                            <a href="../page/page-list.view.client.html">
+                            <a href="../../page/page-list.view.client.html">
                                 Address book app
                             </a>
                         </div>
@@ -37,7 +38,7 @@
                 <li class="list-group-item">
                     <div class="row">
                         <div class="col-8 edit-items" >
-                            <a href="../page/page-list.view.client.html">
+                            <a href="../../page/page-list.view.client.html">
                                 Personal blogger
                             </a>
                         </div>
@@ -51,7 +52,7 @@
                 <li class="list-group-item">
                     <div class="row">
                         <div class="col-8 edit-items">
-                            <a href="../page/page-list.view.client.html">
+                            <a href="../../page/page-list.view.client.html">
                                 what to eat app
                             </a>
                         </div>
@@ -65,7 +66,7 @@
                 <li class="list-group-item">
                     <div class="row">
                         <div class="col-8 edit-items">
-                            <a href="../page/page-list.view.client.html">
+                            <a href="../../page/page-list.view.client.html">
                                 path finder
                             </a>
                         </div>
@@ -79,7 +80,7 @@
                 <li class="list-group-item">
                     <div class="row">
                         <div class="col-8 edit-items">
-                            <a href="../page/page-list.view.client.html">
+                            <a href="../../page/page-list.view.client.html">
                                 Address book app
                             </a>
                         </div>
@@ -105,18 +106,14 @@
                       rows="5"
                       placeholder="So big it is its own country"
                       class="form-control">Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum </textarea>
-
-            <a href="website-list.view.client.html" class="btn btn-block btn-danger">Delete</a>
         </div>
     </div>
-
-
 </div>
 
 <nav class="navbar navbar-default navbar-fixed-bottom">
     <div class="container-fluid">
         <p class="navbar-text pull-right">
-            <a href="../user/templates/profile.view.client.html">
+            <a href="../../user/templates/profile.view.client.html">
                 <i class="glyphicon glyphicon-user" aria-hidden="true"></i>
             </a>
         </p>
