assignment 3 wip, page controllers

--- a/public/assignment/views/widget/templates/widget-image.view.client.html
+++ b/public/assignment/views/widget/templates/widget-image.view.client.html
@@ -5,7 +5,7 @@
                 <i class="fa fa-arrow-left" aria-hidden="true"></i>
             </a>
             <a class="navbar-brand" href="#">
-                Heading Editor
+                Image Editor
             </a>
             <p class="navbar-text pull-right">
                 <a href="widget-list.view.client.html" class="navbar-link">
@@ -30,25 +30,21 @@
            value="US Senate Reaches Compromise"
            id="text"/>
 
-    <label for="size">Size</label>
-    <select id="size" class="form-control">
-        <option>1 (X-Large)</option>
-        <option>2 (Larger)</option>
-        <option>3 (Large)</option>
-        <option>4 (Medium)</option>
-        <option>5 (Small)</option>
-        <option>6 (Smallest)</option>
-    </select>
+    <label for="file">Upload</label>
+    <input id="file" multiple type="file" class="form-control"/>
 
-    <a href="widget-list.view.client.html" class="btn btn-block btn-danger">Delete</a>
+    <a href=""
+       class="btn btn-block btn-success">Upload</a>
+
+    <a href="widget-list.view.client.html"
+       class="btn btn-block btn-danger">Delete</a>
 
 </div>
-
 
 <nav class="navbar navbar-light navbar-fixed-bottom">
     <div class="container-fluid">
         <p class="navbar-text pull-right">
-            <a href="../user/templates/profile.view.client.html">
+            <a href="../../user/templates/profile.view.client.html">
                 <i class="glyphicon glyphicon-user" aria-hidden="true"></i>
             </a>
         </p>
