--- a/public/assignment/views/page/templates/page-list.view.client.html
+++ b/public/assignment/views/page/templates/page-list.view.client.html
@@ -1,14 +1,14 @@
-<nav class="navbar navbar-default navbar-fixed-top">
+<nav class="navbar navbar-light navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="../../user/templates/profile.view.client.html">
+            <a class="navbar-brand" href="../../website/templates/website-list.view.client.html">
                 <i class="fa fa-arrow-left" aria-hidden="true"></i>
             </a>
             <a class="navbar-brand" href="#">
-                Websites
+                Pages
             </a>
             <p class="navbar-text pull-right">
-                <a href="#!/user/{{model.userId}}/website/new" class="navbar-link">
+                <a href="page-new.view.client.html" class="navbar-link">
                     <span class="glyphicon glyphicon-plus"></span>
                 </a>
             </p>
@@ -18,21 +18,21 @@
 
 <div class="container-fluid">
     <ul class="list-group">
-        <li ng-repeat="website in model.websites" class="list-group-item">
-            <div class="row">
+        <li class="list-group-item active">
+            <div ng-repeat="page in model.pages" class="row">
                 <div class="col-lg-5 col-md-8 col-xs-11">
-                    <a href="#!/user/{{model.userId}}/website/{{website._id}}">
-                        {{website.name}}
+                    <a href="/user/{{model.userId}}/website/{{model.wid}}/page/{{model.pid}}/widget">
+                        {{ page.name }}
                     </a>
                 </div>
                 <div class="col-lg-3 visible-lg">
-                    {{website.created | date}}
+                    {{ page.createdAt }}
                 </div>
                 <div class="col-md-3 hidden-sm hidden-xs">
-                    {{website.accessed | date}}
+                    {{ page.lastVisited }}
                 </div>
                 <div class="col-xs-1">
-                    <a href="#!/user/{{model.userId}}/website/{{website._id}}">
+                    <a href="/user/{{model.userId}}/website/{{model.wid}}">
                         <span class="glyphicon glyphicon-cog pull-right"></span>
                     </a>
                 </div>
@@ -41,7 +41,7 @@
     </ul>
 </div>
 
-<nav class="navbar navbar-default navbar-fixed-bottom">
+<nav class="navbar navbar-light navbar-fixed-bottom">
     <div class="container-fluid">
         <p class="navbar-text pull-right">
             <a href="../../user/templates/profile.view.client.html">
