--- a/public/assignment/views/widget/templates/widget-list.view.client.html
+++ b/public/assignment/views/widget/templates/widget-list.view.client.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-light navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="../page/page-list.view.client.html">
+            <a class="navbar-brand" href="../../page/templates/page-list.view.client.html">
                 <i class="fa fa-arrow-left" aria-hidden="true"></i>
             </a>
             <a class="navbar-brand" href="#">
@@ -70,7 +70,7 @@
 <nav class="navbar navbar-light navbar-fixed-bottom">
     <div class="container-fluid">
         <p class="navbar-text pull-right">
-            <a href="../user/templates/profile.view.client.html">
+            <a href="../../user/templates/profile.view.client.html">
                 <i class="glyphicon glyphicon-user" aria-hidden="true"></i>
             </a>
         </p>
