--- a/public/assignment/views/widget/templates/widget-youtube.view.client.html
+++ b/public/assignment/views/widget/templates/widget-youtube.view.client.html
@@ -46,7 +46,7 @@
 <nav class="navbar navbar-light navbar-fixed-bottom">
     <div class="container-fluid">
         <p class="navbar-text pull-right">
-            <a href="../user/templates/profile.view.client.html">
+            <a href="../../user/templates/profile.view.client.html">
                 <i class="glyphicon glyphicon-user" aria-hidden="true"></i>
             </a>
         </p>
