--- a/public/assignment/views/page/templates/page-edit.view.client.html
+++ b/public/assignment/views/page/templates/page-edit.view.client.html
@@ -8,7 +8,7 @@
                 Edit page
             </a>
             <p class="navbar-text pull-right">
-                <a href="page-list.view.client.html" class="navbar-link">
+                <a ng-click="model.updatePage()" class="navbar-link">
                     <span class="glyphicon glyphicon-ok"></span>
                 </a>
             </p>
@@ -21,17 +21,19 @@
         <div class="row">
             <label for="name">Name</label>
             <input class="form-control"
+                   ng-model="model.page.name"
                    placeholder="facebook"
                    value="Blogger"
                    id="name"/>
 
             <label for="description">Description</label>
             <textarea id="description"
+                      ng-model="model.page.description"
                       rows="5"
                       placeholder="So big it is its own country"
                       class="form-control">Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum </textarea>
 
-            <a href="page-list.view.client.html" class="btn btn-block btn-danger">Delete</a>
+            <a ng-click="model.deletePage()" class="btn btn-block btn-danger">Delete</a>
         </div>
 
     </div>
