--- a/public/assignment/views/page/templates/page-list.view.client.html
+++ b/public/assignment/views/page/templates/page-list.view.client.html
@@ -8,7 +8,7 @@
                 Pages
             </a>
             <p class="navbar-text pull-right">
-                <a href="page-new.view.client.html" class="navbar-link">
+                <a href="#!/user/{{model.userId}}/website/{{model.websiteId}}/page/new" class="navbar-link">
                     <span class="glyphicon glyphicon-plus"></span>
                 </a>
             </p>
@@ -19,9 +19,25 @@
 <div class="container-fluid">
     <ul class="list-group">
         <li class="list-group-item active">
+            <div class="row">
+                <div class="col-lg-5 col-md-8 col-xs-11">
+                    Page Name
+                </div>
+                <div class="col-lg-3 visible-lg">
+                    Created At
+                </div>
+                <div class="col-md-3 hidden-sm hidden-xs">
+                    Last visited
+                </div>
+                <div class="col-xs-1">
+                    Edit
+                </div>
+            </div>
+        </li>
+        <li class="list-group-item">
             <div ng-repeat="page in model.pages" class="row">
                 <div class="col-lg-5 col-md-8 col-xs-11">
-                    <a href="/user/{{model.userId}}/website/{{model.wid}}/page/{{model.pid}}/widget">
+                    <a href="#!/user/{{model.userId}}/website/{{model.websiteId}}/page/{{page._id}}/widget">
                         {{ page.name }}
                     </a>
                 </div>
@@ -32,7 +48,7 @@
                     {{ page.lastVisited }}
                 </div>
                 <div class="col-xs-1">
-                    <a href="/user/{{model.userId}}/website/{{model.wid}}">
+                    <a href="#!/user/{{model.userId}}/website/{{model.websiteId}}/page/{{page._id}}">
                         <span class="glyphicon glyphicon-cog pull-right"></span>
                     </a>
                 </div>
