--- a/public/assignment/views/widget/templates/widget-heading.view.client.html
+++ b/public/assignment/views/widget/templates/widget-heading.view.client.html
@@ -1,56 +1,19 @@
-<nav class="navbar navbar-light navbar-fixed-top">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <a class="navbar-brand" href="widget-list.view.client.html">
-                <i class="fa fa-arrow-left" aria-hidden="true"></i>
-            </a>
-            <a class="navbar-brand" href="#">
-                Heading Editor
-            </a>
-            <p class="navbar-text pull-right">
-                <a href="widget-list.view.client.html" class="navbar-link">
-                    <span class="glyphicon glyphicon-ok"></span>
-                </a>
-            </p>
-        </div>
+<!--widget should be available since this should only be -->
+<!--included when ng-switch is on heading-->
+
+<div class="wd-widget">
+    <div class="wd-widget-toolbar">
+        <a href="#!/user/{{model.userId}}/website/{{model.websiteId}}/page/{{model.pageId}}/widget/{{widget._id}}">
+            <span class="glyphicon glyphicon-cog"></span>
+        </a>
+        <span class="glyphicon glyphicon-align-justify"></span>
     </div>
-</nav>
-
-<div class="container-fluid">
-
-    <label for="name">Name</label>
-    <input class="form-control"
-           placeholder="facebook"
-           value="top heading"
-           id="name"/>
-
-    <label for="text">Text</label>
-    <input class="form-control"
-           placeholder="facebook"
-           value="US Senate Reaches Compromise"
-           id="text"/>
-
-    <label for="size">Size</label>
-    <select id="size" class="form-control">
-        <option>1 (X-Large)</option>
-        <option>2 (Larger)</option>
-        <option>3 (Large)</option>
-        <option>4 (Medium)</option>
-        <option>5 (Small)</option>
-        <option>6 (Smallest)</option>
-    </select>
-
-    <a href="widget-list.view.client.html" class="btn btn-block btn-danger">Delete</a>
-
+    <div ng-switch="widget.size">
+        <h1 ng-switch-when="1">{{widget.text}}</h1>
+        <h2 ng-switch-when="2">{{widget.text}}</h2>
+        <h3 ng-switch-when="3">{{widget.text}}</h3>
+        <h4 ng-switch-when="4">{{widget.text}}</h4>
+        <h5 ng-switch-when="5">{{widget.text}}</h5>
+        <h6 ng-switch-when="6">{{widget.text}}</h6>
+    </div>
 </div>
-
-
-<nav class="navbar navbar-light navbar-fixed-bottom">
-    <div class="container-fluid">
-        <p class="navbar-text pull-right">
-            <a href="../../user/templates/profile.view.client.html">
-                <i class="glyphicon glyphicon-user" aria-hidden="true"></i>
-            </a>
-        </p>
-    </div>
-</nav>
