--- a/public/assignment/views/widget/templates/widget-list.view.client.html
+++ b/public/assignment/views/widget/templates/widget-list.view.client.html
@@ -8,7 +8,7 @@
                 Widget List
             </a>
             <p class="navbar-text pull-right">
-                <a href="widget-chooser.view.client.html" class="navbar-link">
+                <a href="#!/user/{{model.userId}}/website/{{model.websiteId}}/page/{{model.pageId}}/widget/new" class="navbar-link">
                     <span class="glyphicon glyphicon-plus"></span>
                 </a>
             </p>
@@ -17,53 +17,18 @@
 </nav>
 
 <div class="container-fluid">
-    <div class="wd-widget">
-        <div class="wd-widget-toolbar">
-            <a href="widget-heading.view.client.html">
-                <span class="glyphicon glyphicon-cog"></span>
-            </a>
-            <span class="glyphicon glyphicon-align-justify"></span>
+    <div ng-repeat="widget in model.widgets">
+        <div ng-switch="widget.widgetType">
+            <div ng-switch-when="HEADING">
+                <div ng-include="'./views/widget/templates/widget-heading.view.client.html'"></div>
+            </div>
+            <div ng-switch-when="IMAGE">
+                <div ng-include="'./views/widget/templates/widget-image.view.client.html'"></div>
+            </div>
+            <div ng-switch-when="YOUTUBE">
+                <div ng-include="'./views/widget/templates/widget-youtube.view.client.html'"></div>
+            </div>
         </div>
-        <h1>GIZMODO</h1>
-    </div>
-    <div class="wd-widget">
-        <div class="wd-widget-toolbar">
-            <span class="glyphicon glyphicon-cog"></span>
-            <span class="glyphicon glyphicon-align-justify"></span>
-        </div>
-        <h3>
-            Sleep Cool And Comfortable All Summer: Save $50 On The Breathable Casper Mattress
-        </h3>
-    </div>
-    <div class="wd-widget">
-        <div class="wd-widget-toolbar">
-            <a href="widget-image.view.client.html">
-                <span class="glyphicon glyphicon-cog"></span>
-            </a>
-            <span class="glyphicon glyphicon-align-justify"></span>
-        </div>
-        <img src="https://i.kinja-img.com/gawker-media/image/upload/s--JYQyMyfT--/c_scale,fl_progressive,q_80,w_800/hkvwpuiqdgtn4ntb2q7z.png"/>
-    </div>
-    <div class="wd-widget">
-        <div class="wd-widget-toolbar">
-            <span class="glyphicon glyphicon-cog"></span>
-            <span class="glyphicon glyphicon-align-justify"></span>
-        </div>
-
-        <p>After a brief tease <a href="http://io9.gizmodo.com/the-first-picture-from-star-trek-discovery-explores-st-1795290281" rel="nofollow">this morning</a>, CBS have just revealed our first full look at <em>Star Trek: Discovery</em>, giving us our best glimpse at what’s to come in the future of <em>Star Trek</em>’s past.<br></p>
-        <p>Revealed at the network’s ongoing Upfronts presentation, the trailer marks the first footage from <em>Discovery</em> beyond the initial ship reveal <a href="http://io9.gizmodo.com/the-new-star-trek-tv-show-has-a-title-and-a-starship-d-1784191488" rel="nofollow">back at San Diego Comic Con last year</a>. Set before the events of the original series, <em>Discovery</em> follows the crew of the titular Federation starship, helmed by Captain Lorca (Jason Isaacs), from the perspective of its First Officer, Michael Burnham (Sonequa Martin Green). <br></p>
-
-    </div>
-    <div class="wd-widget">
-        <div class="wd-widget-toolbar">
-            <a href="widget-youtube.view.client.html">
-                <span class="glyphicon glyphicon-cog"></span>
-            </a>
-            <span class="glyphicon glyphicon-align-justify"></span>
-        </div>
-
-        <iframe width="100%" src="https://www.youtube.com/embed/rwhuzDSlgXM" frameborder="0" allowfullscreen></iframe>
-
     </div>
 </div>
 
