--- a/public/assignment/views/widget/templates/widget-youtube.view.client.html
+++ b/public/assignment/views/widget/templates/widget-youtube.view.client.html
@@ -1,54 +1,10 @@
-<nav class="navbar navbar-default navbar-fixed-top">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <a class="navbar-brand" href="widget-list.view.client.html">
-                <i class="fa fa-arrow-left" aria-hidden="true"></i>
-            </a>
-            <a class="navbar-brand" href="#">
-                Widget Edit
-            </a>
-            <p class="navbar-text pull-right">
-                <a href="widget-list.view.client.html" class="navbar-link">
-                    <span class="glyphicon glyphicon-ok"></span>
-                </a>
-            </p>
-        </div>
+<div class="wd-widget">
+    <div class="wd-widget-toolbar">
+        <a href="#!/user/{{model.userId}}/website/{{model.websiteId}}/page/{{model.pageId}}/widget/{{widget._id}}">
+            <span class="glyphicon glyphicon-cog"></span>
+        </a>
+        <span class="glyphicon glyphicon-align-justify"></span>
     </div>
-</nav>
 
-<div class="container-fluid">
-
-    <label for="name">Name</label>
-    <input class="form-control"
-           placeholder="facebook"
-           value="top heading"
-           id="name"/>
-
-    <label for="text">Text</label>
-    <input class="form-control"
-           placeholder="facebook"
-           value="US Senate Reaches Compromise"
-           id="text"/>
-
-    <label for="URL">URL</label>
-    <input class="form-control"
-           id="URL"
-           placeholder="www.google.com" />
-
-    <label for="width">URL</label>
-    <input class="form-control"
-           id="width"
-           placeholder="32px" />
-
-    <a href="widget-list.view.client.html" class="btn btn-block btn-danger">Delete</a>
+    <iframe width="100%" src="{{model.getYouTubeEmbedUrl(widget.url)}}" frameborder="0" allowfullscreen></iframe>
 </div>
-
-<nav class="navbar navbar-light navbar-fixed-bottom">
-    <div class="container-fluid">
-        <p class="navbar-text pull-right">
-            <a href="../../user/templates/profile.view.client.html">
-                <i class="glyphicon glyphicon-user" aria-hidden="true"></i>
-            </a>
-        </p>
-    </div>
-</nav>
