--- a/public/assignment/views/home.view.client.html
+++ b/public/assignment/views/home.view.client.html
@@ -1,21 +1,19 @@
 <div class="container">
     <div class="row">
         <h1>
-            Project status: assignment 2, static web pages and css
+            Project status: assignment 3
         </h1>
     </div>
 
     <div class="row">
         <p>
-            Please choose from the following web pages:
+            Please choose from the following entry page:
         </p>
     </div>
 
     <div class="row">
         <ul>
-            <li> <a href="#!/pages">Page List</a> </li>
             <li> <a href="#!/users">User List</a> </li>
-            <li> <a href="#!/widgets">Widget List</a> </li>
         </ul>
     </div>
 </div>
