--- a/public/assignment/views/page/templates/page-edit.view.client.html
+++ b/public/assignment/views/page/templates/page-edit.view.client.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-fixed-top navbar-light">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="page-list.view.client.html">
+            <a class="navbar-brand" href="#!/user/{{model.userId}}/website/{{model.websiteId}}">
                 <i class="fa fa-arrow-left" aria-hidden="true"></i>
             </a>
             <a class="navbar-brand" href="#">
@@ -39,12 +39,4 @@
     </div>
 </div>
 
-<nav class="navbar navbar-light navbar-fixed-bottom">
-    <div class="container-fluid">
-        <p class="navbar-text pull-right">
-            <a href="../../user/templates/profile.view.client.html">
-                <i class="glyphicon glyphicon-user" aria-hidden="true"></i>
-            </a>
-        </p>
-    </div>
-</nav>
+<div ng-include="'./views/components/profile-footer.view.client.html'"></div>
