--- a/public/assignment/views/website/templates/website-list.view.client.html
+++ b/public/assignment/views/website/templates/website-list.view.client.html
@@ -1,10 +1,10 @@
 <nav class="navbar navbar-default navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="../../user/templates/profile.view.client.html">
+            <a class="navbar-brand" href="#!/user/{{model.userId}}">
                 <i class="fa fa-arrow-left" aria-hidden="true"></i>
             </a>
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand">
                 Websites
             </a>
             <p class="navbar-text pull-right">
@@ -41,12 +41,4 @@
     </ul>
 </div>
 
-<nav class="navbar navbar-default navbar-fixed-bottom">
-    <div class="container-fluid">
-        <p class="navbar-text pull-right">
-            <a href="../../user/templates/profile.view.client.html">
-                <i class="glyphicon glyphicon-user" aria-hidden="true"></i>
-            </a>
-        </p>
-    </div>
-</nav>
+<div ng-include="'./views/components/profile-footer-dark.view.client.html'"></div>
