--- a/public/assignment/views/widget/editors/widget-heading-edit.view.client.html
+++ b/public/assignment/views/widget/editors/widget-heading-edit.view.client.html
@@ -1,10 +1,10 @@
 <nav class="navbar navbar-light navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="../templates/widget-list.view.client.html">
+            <a class="navbar-brand" href="#!/user/{{model.userId}}/website/{{model.websiteId}}/page/{{model.pageId}}/widget">
                 <i class="fa fa-arrow-left" aria-hidden="true"></i>
             </a>
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand">
                 Heading Editor
             </a>
             <p class="navbar-text pull-right">
@@ -20,21 +20,21 @@
 
     <label for="name">Name</label>
     <input class="form-control"
-           ng-model="widget.name"
+           ng-model="model.widget.name"
            placeholder="facebook"
            value="top heading"
            id="name"/>
 
     <label for="text">Text</label>
     <input class="form-control"
-           ng-model="widget.text"
+           ng-model="model.widget.text"
            placeholder="facebook"
            value="US Senate Reaches Compromise"
            id="text"/>
 
     <label for="size">Size</label>
     <select id="size"
-            ng-model="widget.size"
+            ng-model="model.widget.size"
             class="form-control">
         <option value="1">1 (X-Large)</option>
         <option value="2">2 (Larger)</option>
@@ -47,13 +47,4 @@
     <a ng-click="model.deleteWidget()" class="btn btn-block btn-danger">Delete</a>
 </div>
 
-
-<nav class="navbar navbar-light navbar-fixed-bottom">
-    <div class="container-fluid">
-        <p class="navbar-text pull-right">
-            <a href="../../user/templates/profile.view.client.html">
-                <i class="glyphicon glyphicon-user" aria-hidden="true"></i>
-            </a>
-        </p>
-    </div>
-</nav>
+<div ng-include="'./views/components/profile-footer.view.client.html'"></div>
