--- a/public/assignment/views/widget/editors/widget-image-edit.view.client.html
+++ b/public/assignment/views/widget/editors/widget-image-edit.view.client.html
@@ -4,11 +4,11 @@
             <a class="navbar-brand" href="../templates/widget-list.view.client.html">
                 <i class="fa fa-arrow-left" aria-hidden="true"></i>
             </a>
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand">
                 Image Editor
             </a>
             <p class="navbar-text pull-right">
-                <a href="../templates/widget-list.view.client.html" class="navbar-link">
+                <a ng-click="model.updateWidget()" class="navbar-link">
                     <span class="glyphicon glyphicon-ok"></span>
                 </a>
             </p>
@@ -20,12 +20,14 @@
 
     <label for="name">Name</label>
     <input class="form-control"
+           ng-model="model.widget.name"
            placeholder="facebook"
            value="top heading"
            id="name"/>
 
     <label for="text">Text</label>
     <input class="form-control"
+           ng-model="model.widget.text"
            placeholder="facebook"
            value="US Senate Reaches Compromise"
            id="text"/>
@@ -36,17 +38,9 @@
     <a href=""
        class="btn btn-block btn-success">Upload</a>
 
-    <a href="../templates/widget-list.view.client.html"
+    <a ng-click="model.deleteWidget()"
        class="btn btn-block btn-danger">Delete</a>
 
 </div>
 
-<nav class="navbar navbar-light navbar-fixed-bottom">
-    <div class="container-fluid">
-        <p class="navbar-text pull-right">
-            <a href="../../user/templates/profile.view.client.html">
-                <i class="glyphicon glyphicon-user" aria-hidden="true"></i>
-            </a>
-        </p>
-    </div>
-</nav>
+<div ng-include="'./views/components/profile-footer.view.client.html'"></div>
