--- a/public/assignment/views/user/templates/login.view.client.html
+++ b/public/assignment/views/user/templates/login.view.client.html
@@ -2,7 +2,7 @@
     <div class="centered-form">
         <h1>Login</h1>
 
-        <div class="alert">
+        <div ng-show="model.message" class="alert alert-info">
             {{ model.message }}
         </div>
 
