Implemented sortable directive

--- a/public/assignment/views/widget/templates/widget-list.view.client.html
+++ b/public/assignment/views/widget/templates/widget-list.view.client.html
@@ -16,9 +16,9 @@
     </div>
 </nav>
 
-<div class="container-fluid">
-    <div ng-repeat="widget in model.widgets">
-        <div ng-switch="widget.widgetType">
+<sortable pid="model.pageId" class="container-fluid">
+    <div ng-repeat="widget in model.widgets | orderBy: 'index'">
+        <div id="{{widget._id}}" class="widget" ng-switch="widget.widgetType">
             <div ng-switch-when="HEADING">
                 <div ng-include="'./views/widget/templates/widget-heading.view.client.html'"></div>
             </div>
@@ -30,6 +30,6 @@
             </div>
         </div>
     </div>
-</div>
+</sortable>
 
 <div ng-include="'./views/components/profile-footer.view.client.html'"></div>
