--- a/public/assignment/views/widget/templates/widget-chooser.view.client.html
+++ b/public/assignment/views/widget/templates/widget-chooser.view.client.html
@@ -22,7 +22,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col">
-                        <a ng-click="model.createWidget(widgetType)">
+                        <a ng-click="model.updateWidget(widgetType)">
                             {{ widgetType }}
                         </a>
                     </div>
