--- a/public/assignment/views/page/templates/page-edit.view.client.html
+++ b/public/assignment/views/page/templates/page-edit.view.client.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-fixed-top navbar-light">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#!/user/{{model.userId}}/website/{{model.websiteId}}">
+            <a class="navbar-brand" href="#!/user/website/{{model.websiteId}}">
                 <i class="fa fa-arrow-left" aria-hidden="true"></i>
             </a>
             <a class="navbar-brand" href="#">
