--- a/public/assignment/views/user/templates/profile.view.client.html
+++ b/public/assignment/views/user/templates/profile.view.client.html
@@ -59,7 +59,7 @@
         <a class="btn btn-success btn-block"
            ng-click="model.updateUser()">Update Profile</a>
         <a class="btn btn-primary btn-block"
-           href="#!/user/{{model.user._id}}/website">Websites</a>
+           href="#!/user/website">Websites</a>
         <a class="btn btn-danger  btn-block"
            ng-click="model.logout()">Logout</a>
     </div>
