--- a/public/assignment/views/widget/editors/widget-html-edit.view.client.html
+++ b/public/assignment/views/widget/editors/widget-html-edit.view.client.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-light navbar-fixed-top">
     <div class="container-fluid">
         <div class="navbar-header">
-            <a class="navbar-brand" href="#!/user/{{model.userId}}/website/{{model.websiteId}}/page/{{model.pageId}}/widget">
+            <a class="navbar-brand" href="#!/user/website/{{model.websiteId}}/page/{{model.pageId}}/widget">
                 <i class="fa fa-arrow-left" aria-hidden="true"></i>
             </a>
             <a class="navbar-brand">
