--- a/public/assignment/views/widget/templates/widget-text.view.client.html
+++ b/public/assignment/views/widget/templates/widget-text.view.client.html
@@ -1,6 +1,6 @@
 <div class="wd-widget">
     <div class="wd-widget-toolbar" style="z-index: 1;">
-        <a href="#!/user/{{model.userId}}/website/{{model.websiteId}}/page/{{model.pageId}}/widget/{{widget._id}}">
+        <a href="#!/user/website/{{model.websiteId}}/page/{{model.pageId}}/widget/{{widget._id}}">
             <span class="glyphicon glyphicon-cog"></span>
         </a>
         <span class="glyphicon glyphicon-align-justify"></span>
