--- a/public/assignment/views/page/templates/page-new.view.client.html
+++ b/public/assignment/views/page/templates/page-new.view.client.html
@@ -17,6 +17,7 @@
 </nav>
 
 <div class="container">
+    <div ng-include="'./views/components/message-flash.view.client.html'"></div>
     <div class="row">
         <label for="name">Name</label>
         <input class="form-control"
