--- a/public/assignment/views/page/templates/page-edit.view.client.html
+++ b/public/assignment/views/page/templates/page-edit.view.client.html
@@ -17,6 +17,8 @@
 </nav>
 
 <div class="container-fluid">
+    <div ng-include="'./views/components/message-flash.view.client.html'"></div>
+
     <div class="container">
         <div class="row">
             <label for="name">Name</label>
