--- a/public/assignment/views/user/templates/login.view.client.html
+++ b/public/assignment/views/user/templates/login.view.client.html
@@ -1,23 +1,24 @@
 <div class="container-fluid">
-    <div class="centered-form">
+    <form class="centered-form">
         <h1>Login</h1>
 
-        <div ng-show="model.message" class="alert alert-info">
-            {{ model.message }}
-        </div>
+        <div ng-include="'./views/components/message-flash.view.client.html'"></div>
 
         <label for="username">Username</label>
         <input type="text"
                ng-model="username"
                id="username"
                class="form-control"
-               placeholder="blob123"/>
+               placeholder="blob123"
+               required
+        />
 
         <label for="password">Password</label>
         <input type="password"
                ng-model="password"
                id="password"
                class="form-control"
+               required
                placeholder="sliq878"/>
 
         <a class="btn btn-primary btn-block"
@@ -30,6 +31,6 @@
 
         <a class="btn btn-success btn-block"
            href="#!/register">Register</a>
-    </div>
+    </form>
 </div>
 
