--- a/public/assignment/views/user/templates/profile.view.client.html
+++ b/public/assignment/views/user/templates/profile.view.client.html
@@ -16,9 +16,8 @@
     <div ng-show="model.error" class="alert alert-danger">
         {{ model.error }}
     </div>
-    <div ng-show="model.message" class="alert alert-info">
-        {{ model.message }}
-    </div>
+
+    <div ng-include="'./views/components/message-flash.view.client.html'"></div>
 
     <form class="centered-form">
         <div class="form-group">
