--- a/public/assignment/views/user/templates/register.view.client.html
+++ b/public/assignment/views/user/templates/register.view.client.html
@@ -1,6 +1,8 @@
 <div class="container centered-form">
     <h1>Register</h1>
 
+    <div ng-include="'./views/components/message-flash.view.client.html'"></div>
+
     <label for="username">Username</label>
     <input type="text"
            ng-model="username"
