--- a/public/assignment/views/website/templates/website-new.view.client.html
+++ b/public/assignment/views/website/templates/website-new.view.client.html
@@ -17,6 +17,8 @@
 </nav>
 
 <div class="container-fluid">
+    <div ng-include="'./views/components/message-flash.view.client.html'"></div>
+
     <div class="row">
         <div class="col-xs-4 hidden-xs">
             <ul class="list-group">
