--- a/public/assignment/views/widget/editors/widget-text-edit.view.client.html
+++ b/public/assignment/views/widget/editors/widget-text-edit.view.client.html
@@ -18,6 +18,12 @@
 
 <div class="container-fluid">
 
+    <label for="name">Name</label>
+    <input class="form-control"
+           ng-model="model.widget.name"
+           placeholder="facebook"
+           value="top heading"
+           id="name"/>
     Text
     <input ng-model="model.widget.text" class="form-control"/>
     Rows
