--- a/public/assignment/views/widget/templates/widget-edit.view.client.html
+++ b/public/assignment/views/widget/templates/widget-edit.view.client.html
@@ -1,3 +1,4 @@
+<div ng-include="'./views/components/message-flash.view.client.html'"></div>
 <div ng-switch="model.widget.type">
     <div ng-switch-when="HEADING">
         <div ng-include="'./views/widget/editors/widget-heading-edit.view.client.html'"></div>
